--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start:dev": "ts-node-dev --respawn --transpile-only ./src/app/server.ts",
     "build": "tsc",
     "lint": "eslint src --ignore-path .eslintignore --ext .ts",
-    "prettier": "prettier --ignore-path .gitignore --write \".src/**/*.+(js|ts|json)\"",
-    "pretter:fix": "npx pretter --write src",
+    "prettier": "prettier --ignore-path .gitignore --write \"*src/*/*.+(js|ts|json)\"",
+    
+    "prettier:fix": "npx pretter --write src",
     "lint:fix": "npx eslint src --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
