--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ NODE_ENV = development
 PORT = 5000
 DATABASE_URL = mongodb+srv://admin-um-recap:1tl5RmjJ9Qth6nO9@cluster0.az94fyn.mongodb.net/first-project-recap?retryWrites=true&w=majority
 BCRYPT_SALT_ROUNDS = 12
+DEFAULT_PASS = phuniversity!@#
